--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 	<head>
 	
     <meta charset="utf-8">
@@ -7,13 +7,76 @@
     <meta name="description" content="Bartosz Tylkowski">
     <meta name="author" content="Bartosz Tylkowski">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Bartosz Tylkowski Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 	</head>
-<body>
+  <body>
 
-</body>
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+              <a class="nav-link " href="#">Projekt <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">O mnie</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Bartosz Tylkowski</h3>
+      </div>
+
+      <div class="jumbotron">
+        <h1 class="display-3" style="text-align:center;">CSS HTML JS</h1>
+        <img class="obrazki" src="grafika\css.png" style="width:12%"/>
+        <img class="obrazki" src="grafika\html.png" style="width:17%"/>
+        <img class="obrazki" src="grafika\js.png" style="width:13%"/>
+        <p class="lead">Frontendzik który kiedyś może z praktyką wyłapię, przesuwałem te jebane obrazki z godzine.</p>
+       
+      </div>
+
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <h4>HTML</h4>
+          <p class="ht">Hipertekstowy język znaczników, wykorzystywany do tworzenia dokumentów hipertekstowych.</p>
+
+          <h4>CSS</h4>
+          <p class="css">Kaskadowe arkusze stylów to język służący do opisu formy prezentacji (wyświetlania) stron WWW. CSS został opracowany przez organizację W3C w 1996 r. jako potomek języka DSSSL przeznaczony do używania w połączeniu z SGML-em. Pierwszy szkic CSS zaproponował w 1994 r. Håkon Wium Lie.</p>
+
+          <h4>JavaScript</h4>
+          <p class="js">Skryptowy język programowania, stworzony przez firmę Netscape, najczęściej stosowany na stronach internetowych. Twórcą JavaScriptu jest Brendan Eich[3]. Pod koniec lat 90. XX wieku organizacja ECMA wydała na podstawie JavaScriptu standard języka skryptowego o nazwie ECMAScript, aktualnie rozwijaniem tego standardu zajmuje się komisja TC39.</p>
+        </div>
+
+        <div class="col-lg-6">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <p>&copy; Company 2017</p>
+      </footer>
+
+    </div> <!-- /container -->
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
