--- a/bootstrap.html
+++ b/bootstrap.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Bartosz Tylkowski">
     <meta name="author" content="Bartosz Tylkowski">
 
-    <title>Bartosz Tylkowski Portfolio</title>
+    <title>be do te 2017</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
             </li>
           </ul>
         </nav>
-        <h3 id="topka">Bartosz Tylkowski</h3>
+        <h3 id="topka" class="text-warning">Bartosz Tylkowski</h3>
       </div>
 
       <div class="jumbotron">
@@ -96,11 +96,15 @@
 
   </script>
   <div class="widget">
+
+
 <form>
-<input type="button" class="btn1" value="Dark" onclick="href='style.css'" />
-<input type="button" class="btn2" value="Light" onclick="href='light'" />
+<input type="button" class="btn1" value="Dark" onClick='location="light.css"'/>
+
+<input type="button" class="btn2" value="Light" onclick='link rel="stylesheet" type="text/css" href="light.css"' />
 </form>
-</div>
+
+<button class="bn-xs">dupa</button>
 
       <footer class="footer">
         <p>&copy; BE DO TE 2017</p>
@@ -114,4 +118,4 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
-</html>
+</html> 
