--- a/bootstrap.html
+++ b/bootstrap.html
@@ -27,10 +27,10 @@
         <nav>
           <ul class="nav nav-pills float-right">
             <li class="nav-item">
-              <a class="nav-link" href="#" class="smoothScroll">Obrazek <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#obrazek" >Obrazek <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">O mnie</a>
+              <a class="nav-link" href="#omnie">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.google.pl/?gfe_rd=cr&ei=Fi6lWc2JIuWv8wfs3aZ4&gws_rd=ssl" target="_blank">google</a>
@@ -84,10 +84,38 @@
         </div>
        	<div name="obrazek" id="obrazek">
        	<img src="jsanim.gif" style="width: 100%;height: 100%;">
+       </div>
 
+     <div class="row marketing">
+      <div class="col-lg-12">
+       	<h4>ABOUT</h4>
+       	<p name="omnie">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+       	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+       	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+       	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+       	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+       	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+       	</p></div>
 
-       	</div>
+       	<div class="col-lg-6">
+       	<h2 class="t1">TABELKA PIERWSZA</h2>
+       		<ul class="list-group" id="table1">
+       			<li class="list-group-item">obiekt1</li>
+       			<li class="list-group-item">obiekt2</li>
+       			<li class="list-group-item">obiekt3</li>
+       		</ul>
+       </div>
+       <div class="col-lg-6">
+       <h2>TABELKA DRUGA</h2>
+       		<ol class="list-group" id="table2">
+       			<li class="list-group-item">klikaj</li>
+       			<li class="list-group-item">to</li>
+       			<li class="list-group-item">ucieknie</li>
+       		</ol>
+       </div>
+
       </div>
+     </div>
       <script>
   $( function() {
     $( ".widget input[type=submit], .widget a, .widget button" ).button();
@@ -95,7 +123,7 @@
       //event.preventDefault();
     } );
   } );
-
+  	//button addvlass/removeClass
    $( function() {
     $( "#button" ).on( "click", function() {
       $( "#effect" ).addClass( "newClass", 1000, callback );
@@ -135,15 +163,34 @@ $(document).on('click', 'a', function(event){
         scrollTop: $( $.attr(this, 'href') ).offset().top
     }, 100);
 });
+//tabelka slide down, chowające się obiekty
+$(function() {
 
+  $('h2.t1').hide().slideDown();
+  var $li = $('ul li:gt(0)');
+  $li.hide().each(function(index) {
+    $(this).delay(300 * index).fadeIn(300);
+  });
 
+  $li.on('click', function() {
+    $(this).fadeOut(700);
+  });
+
+}); 
+$(function() {
+  $('ol li:lt(3)').on('click', function() {
+    $(this).animate({
+      opacity: 0.0,
+      paddingLeft: '+=90'
+    }, 500, function() {
+      $(this).remove();
+    });
+  });
+});
   </script>
-  <div class="widget">
+  
 
-<button id="g1" class="btn1">Dark</button>
-<button id="g2" class="btn2">Light</button>
-
- 	
+<div class="widget">
 
  	<a name="chuj">to jest moj cel</a>
      
@@ -153,10 +200,13 @@ $(document).on('click', 'a', function(event){
 
 
       <footer class="footer">
+      <button id="g1" class="btn1">Dark</button>
+	  <button id="g2" class="btn2">Light</button>
+
         <p>&copy; BE DO TE 2017</p>
       </footer>
-
-    </div> <!-- /container -->
+      </div>
+     <!-- /container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
