--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <img class="obrazki" src="css.png" style="width:12%"/>
         <img class="obrazki" src="html.png" style="width:17%"/>
         <img class="obrazki" src="js.png" style="width:13%"/>
-        <p class="lead">Frontendzik który kiedyś może z praktyką wyłapię, przesuwałem te jebane obrazki z godzine.</p>
+        <p class="lead">Lorem lorem ipsum ipsum</p>
 
       </div>
 
 
 
-      <a href="#chuj">zabierz minie do chuj</a>
+      <a href="#chuj">zabierz minie do ***</a>
 
 
 
